--- a/main.css
+++ b/main.css
@@ -1,1 +1,90 @@
 
+
+
+.team1 {
+    float: left;
+    margin-top: 75px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 70%;
+}
+
+h1 {
+    text-align: left;
+    margin-left: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: #333;
+    padding-bottom: 10px;
+    font-family: serif;
+
+}
+
+h1:after {
+    content: '';
+    background: #333;
+    display: block;
+    height: 3px;
+    width: 150px;
+    margin-left: 30px;
+}
+
+.img-responsive {
+    width: 250px;
+    height: 280px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 0px;
+}
+
+.profile {
+    margin-top: 25px;
+}
+
+.profile .img-box {
+    opacity: 1;
+    display: block;
+    position: relative;
+}
+
+
+.profile h2 {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+    font-family: serif;
+}
+
+.profile h3 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 10px;
+    font-family: serif;
+}
+
+#description {
+    font-family: serif;
+}
+
+.img-box:after {
+    content: '';
+    opacity: 0;
+    background-color: rgba(0,0,0,0.6);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.about {
+    float: right;
+    width: 20%;
+    margin-top: 150px;
+    margin-right: 75px;
+    font-family: serif;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: #333;
+}
